--- a/index.html
+++ b/index.html
@@ -10,76 +10,71 @@
 <!--<![endif]-->
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F8X6Z5TK5D"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F8X6Z5TK5D"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
+    function gtag() {
+      dataLayer.push(arguments);
+    }
 
-        gtag('js', new Date());
+    gtag('js', new Date());
+    gtag('config', 'G-F8X6Z5TK5D');
+  </script>
 
-        gtag('config', 'G-F8X6Z5TK5D');
-    </script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Anastasia Surikova | Front-end developer & UI/UX designer</title>
+  <meta name="description" content="NMy personal webpage">
+  <meta name="keywords" content="anastasia surikova, prague, volgograd, czech, russia, анастасия сурикова, прага, волгоград, чехия, россия">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles/app.scss">
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Anastasia Surikova | Front-end developer & UI/UX designer</title>
-    <meta name="description" content="NMy personal webpage">
-    <meta name="keywords" content="anastasia surikova, prague, volgograd, czech, russia, анастасия сурикова, прага, волгоград, чехия, россия">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/app.scss">
-
-    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-    <link rel="icon" href="./favicon.ico">
-    <link rel="manifest" href="./site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+  <link rel="icon" href="./favicon.ico">
+  <link rel="manifest" href="./site.webmanifest">
 </head>
 
 <body>
 <nav>
-    <ul>
-        <li><a href="#home" class="active">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
+  <ul>
+    <li><a href="#home" class="active">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
 </nav>
 
 <section id="home">
-    <h1>Hi,</h1>
-    <p>I'm glad you came to my personal website. Choose one of the sections on the right.</p>
+  <h1>Hi</h1>
+  <p>I'm glad you came to my personal website. Choose one of the sections on the right.</p>
 </section>
 
 <section id="about">
-    <h1>About me.</h1>
-    <p>I'm <span data-age>24</span> y.o. Russian girl living in Prague, Czech Republic studying Open Informatics program at Czech Technical University.</p>
-    <p>I make websites, edit pictures (check out my works on <a href="https://www.flickr.com/photos/anastasia_surikova/" target="_blank">flickr</a>) and do a lot of other useful computer stuff.</p>
-    <p>Currently I work as a front-end developer.</p>
-    <p>I was born in Volgograd, Russia. I have been interested in computers since my childhood. At the age of 14 I began to discover a process of website developing and that's what I've been doing
-        until today.</p>
+  <h1>About me</h1>
+  <p>I'm <span data-age>24</span> y.o. Russian girl living in Prague, Czech Republic studying Open Informatics program at Czech Technical University.</p>
+  <p>I make websites, edit pictures (check out my works on <a href="https://www.flickr.com/photos/anastasia_surikova/" target="_blank">flickr</a>) and do a lot of other useful computer stuff.</p>
+  <p>Currently I work as a front-end developer.</p>
+  <p>I was born in Volgograd, Russia. I have been interested in computers since my childhood. At the age of 14 I began to discover a process of website developing and that's what I've been doing
+    until today.</p>
 </section>
 
 <section id="projects">
-    <h1>Projects</h1>
+  <h1>Projects</h1>
 </section>
 
 <section id="contact">
-    <h1>Contact</h1>
+  <h1>Contact</h1>
 </section>
 
 <!-- Footer -->
 <footer>
-    <div class="container">
-        &copy; 2017 - <span data-year></span>,
-        Anastasia Surikova
-    </div>
+  &copy; 2017 - <span data-year></span>, Anastasia Surikova
 </footer>
 
 <script src="js/app.js"></script>
 </body>
-
 </html>
