--- a/index.html
+++ b/index.html
@@ -64,6 +64,24 @@
 
 <section id="projects">
   <h1>Projects</h1>
+  <div class="project-list">
+    <a href="https://mild.blue/" target="_blank" class="project">
+      <div class="project__img" style="background: url('img/mb.png');"></div>
+      <div class="project__desc">AI startup webpage</div>
+    </a>
+    <a href="https://www.autodoprava-watierova.cz/" target="_blank" class="project">
+      <div class="project__img" style="background: url('img/aw.png');"></div>
+      <div class="project__desc">Transport company webpage</div>
+    </a>
+    <a href="https://pauldent.cz/" target="_blank" class="project">
+      <div class="project__img" style="background: url('img/pd.png');"></div>
+      <div class="project__desc">Dentist's webpage with content administration</div>
+    </a>
+    <a href="https://editor.eduard.fel.cvut.cz/" target="_blank" class="project">
+      <div class="project__img" style="background: url('img/ed.png');"></div>
+      <div class="project__desc">Interactive school books editor</div>
+    </a>
+  </div>
 </section>
 
 <section id="contact">
