--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
 
 <section id="contact">
   <h1>Contact</h1>
+  <p>Choose your favourite social network to make friends with me.</p>
+  <div class="social">
+    <a href="//github.com/misslecter" target="_blank">GitHub</a>
+    <a href="//www.linkedin.com/in/anastasia-surikova" target="_blank">LinkedIn</a>
+    <a href="//www.facebook.com/anastasia.surikova" target="_blank">Facebook</a>
+    <a href="//www.instagram.com/an_surikova/" target="_blank">Instagram</a>
+    <a href="//www.flickr.com/photos/anastasia_surikova/" target="_blank">Flickr</a>
+  </div>
 </section>
 
 <!-- Footer -->
