--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
 
 <section id="projects">
   <h1>Projects</h1>
+  <h2>University-based</h2>
+  <div class="project-list">
+    <a href="https://htw-dresden.qucosa.de/api/qucosa%3A70925/attachment/ATT-0/" target="_blank" class="project">
+      <div class="project__img" style="background: url('img/oa.png');"></div>
+      <div class="project__desc">Raising living standards of older adults</div>
+    </a>
+    <a href="https://editor.eduard.fel.cvut.cz/" target="_blank" class="project">
+      <div class="project__img" style="background: url('img/ed.png');"></div>
+      <div class="project__desc">Interactive school books editor</div>
+    </a>
+  </div>
+
+  <h2>Commercial</h2>
   <div class="project-list">
     <a href="https://mild.blue/" target="_blank" class="project">
       <div class="project__img" style="background: url('img/mb.png');"></div>
@@ -76,10 +89,6 @@
     <a href="https://pauldent.cz/" target="_blank" class="project">
       <div class="project__img" style="background: url('img/pd.png');"></div>
       <div class="project__desc">Dentist's webpage with content administration</div>
-    </a>
-    <a href="https://editor.eduard.fel.cvut.cz/" target="_blank" class="project">
-      <div class="project__img" style="background: url('img/ed.png');"></div>
-      <div class="project__desc">Interactive school books editor</div>
     </a>
   </div>
 </section>
