dashboard project added

--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
       <div class="project__desc">Dentist's webpage with content administration</div>
     </a>
   </div>
+
+  <h2>Just for fun</h2>
+  <div class="project-list">
+    <a href="http://anastasiasurikova.com/dashboard" target="_blank" class="project">
+      <div class="project__img" style="background: url('img/db.png');"></div>
+      <div class="project__desc">Personal online dashboard</div>
+    </a>
+  </div>
 </section>
 
 <section id="contact">
