--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <li><a href="#projects">Projects</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
+  <a href="assets/CV_Anastasia_Surikova.pdf" target="_blank" class="button">CV</a>
 </nav>
 
 <section id="home">
@@ -78,6 +79,10 @@
       <div class="project__img" style="background: url('img/ed.png');"></div>
       <div class="project__desc">Interactive school books editor</div>
     </a>
+    <a href="https://github.com/misslecter/authors-collaboration-visualisation" target="_blank" class="project">
+      <div class="project__img" style="background: url('img/ac.png');"></div>
+      <div class="project__desc">Visualization of authors collaboration</div>
+    </a>
   </div>
 
   <h2>Commercial</h2>
@@ -98,7 +103,7 @@
 
   <h2>Just for fun</h2>
   <div class="project-list">
-    <a href="http://anastasiasurikova.com/dashboard" target="_blank" class="project">
+    <a href="https://misslecter.github.io/dashboard/" target="_blank" class="project">
       <div class="project__img" style="background: url('img/db.png');"></div>
       <div class="project__desc">Personal online dashboard</div>
     </a>
