--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="project__img" style="background: url('img/ed.png');"></div>
       <div class="project__desc">Interactive school books editor</div>
     </a>
-    <a href="https://github.com/misslecter/authors-collaboration-visualisation" target="_blank" class="project">
+    <a href="https://misslecter.github.io/authors-collaboration-visualisation/" target="_blank" class="project">
       <div class="project__img" style="background: url('img/ac.png');"></div>
       <div class="project__desc">Visualization of authors collaboration</div>
     </a>
