--- a/index.html
+++ b/index.html
@@ -83,10 +83,22 @@
       <div class="project__img" style="background: url('img/ac.png');"></div>
       <div class="project__desc">Visualization of authors collaboration</div>
     </a>
+    <a href="https://misslecter.github.io/dashboard/" target="_blank" class="project">
+      <div class="project__img" style="background: url('img/db.png');"></div>
+      <div class="project__desc">Personal online dashboard</div>
+    </a>
   </div>
 
   <h2>Commercial</h2>
   <div class="project-list">
+    <a href="https://breviary.mild.blue/" target="_blank" class="project">
+      <div class="project__img" style="background: url('img/br.png');"></div>
+      <div class="project__desc">Virtual Breviary mobile app</div>
+    </a>
+    <a href="https://txmatching.mild.blue/" target="_blank" class="project">
+      <div class="project__img" style="background: url('img/tx.png');"></div>
+      <div class="project__desc">Live donor kidney matching tool</div>
+    </a>
     <a href="https://mild.blue/" target="_blank" class="project">
       <div class="project__img" style="background: url('img/mb.png');"></div>
       <div class="project__desc">AI startup webpage</div>
@@ -98,14 +110,6 @@
     <a href="https://pauldent.cz/" target="_blank" class="project">
       <div class="project__img" style="background: url('img/pd.png');"></div>
       <div class="project__desc">Dentist's webpage with content administration</div>
-    </a>
-  </div>
-
-  <h2>Just for fun</h2>
-  <div class="project-list">
-    <a href="https://misslecter.github.io/dashboard/" target="_blank" class="project">
-      <div class="project__img" style="background: url('img/db.png');"></div>
-      <div class="project__desc">Personal online dashboard</div>
     </a>
   </div>
 </section>
