--- a/index.html
+++ b/index.html
@@ -52,10 +52,8 @@
 <section id="home">
   <div class="home">
     <h1>Hi</h1>
-    <p>I'm glad you came to my personal website. Choose one of the sections on the right <span class="arrow"></span></p>
+    <p>I'm glad you came to my personal website. Choose one of the sections on the right <a href="#about" class="arrow"><span></span></a></p>
   </div>
-
-  <!--  <a href="#about" role="button">Who am I</a>-->
 </section>
 
 <section id="about">
