--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Anastasia Surikova | Front-end developer & UI/UX designer</title>
-  <meta name="description" content="NMy personal webpage">
+  <meta name="description" content="My personal webpage">
   <meta name="keywords" content="anastasia surikova, prague, volgograd, czech, russia, анастасия сурикова, прага, волгоград, чехия, россия">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/app.scss">
