add thesis, update parcel

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
   <h1>Projects</h1>
   <h2>University-based</h2>
   <div class="project-list">
+    <a href="https://misslecter.github.io/production-process-visualization/" target="_blank" class="project">
+      <div class="project__img" style="background: url('img/prodvis.png');"></div>
+      <div class="project__desc">Production process visualization (MSc thesis)</div>
+    </a>
     <a href="https://htw-dresden.qucosa.de/api/qucosa%3A70925/attachment/ATT-0/" target="_blank" class="project">
       <div class="project__img" style="background: url('img/oa.png');"></div>
       <div class="project__desc">Raising living standards of older adults</div>
@@ -129,6 +133,6 @@
   &copy; 2017 - <span data-year></span>, Anastasia Surikova
 </footer>
 
-<script src="js/app.js"></script>
+<script type="module" src="js/app.js"></script>
 </body>
 </html>
